fix(landing): add block margin to hero to prevent stretching over island menu

--- a/profiles/landing-page/resources/css/landing-page.css
+++ b/profiles/landing-page/resources/css/landing-page.css
@@ -134,6 +134,7 @@ header.row {
 
 .hero div {
     align-self: flex-end;
+    margin-block-start: var(--s4);
     margin-block-end: var(--s4);
     width: 100%;
 }
